--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
+<head>
+  <title>About Indira </title>
+</head>
 <html>
 <body>
+  
+  <h1>My First Heading</h1>
+    <p>My first paragraph.</p>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
-</body>
+  </body>
 </html>
