--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
 <html>
 <body>
   
-  <h1>My First Heading</h1>
+  <h1>Likes: Food,watching shows on netflix/movies, doing hair  </h1> Dislikes: doing dishes, school
     <p>My first paragraph.</p>
 
   </body>
