--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
 <html>
 <body>
   
-  <h1>Likes: Food,watching shows on netflix/movies, doing hair  </h1> Dislikes: doing dishes, school
+  <h1>Likes: Food,watching shows on netflix/movies, doing hair  </h1> Dislikes: doing dishes, school <p style = "color:blue;"> I am blue</p> 
     <p>My first paragraph.</p>
   input 
 
