--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
 </head>
 <html>
 <body>
-  
+<p> Indira Jackson <p style = " color:light blue;">  
   <h1>Likes: Food,watching shows on netflix/movies, doing hair  </h1> Dislikes: doing dishes, school <p style = "color:blue;"> 
     <p>My first paragraph.</p>
   input 
