--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
   <title>About Indira </title>
 </head>
 <html>
-<body style ="background-image: url('.forward/Rihanna.jpg');">
+<body style ="background-image: url('Rihanna.jpg');">
 <p style = "color:blue;">
 <p> Indira Jackson  
   <h1>Likes: Food,watching shows on netflix/movies, doing hair  </h1> Dislikes: doing dishes, school
