--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <head>
+  <style>
+body  {
+    background-image: url("Rihanna.jpg");
+    background-color: #cccccc;
+}
+</style>
+  
   <title>About Indira </title>
 </head>
 <html>
-<body style ="background-image: url('Rihanna.jpg');">
+<body>
 <p style = "color:blue;">
 <p> Indira Jackson  
   <h1>Likes: Food,watching shows on netflix/movies, doing hair  </h1> Dislikes: doing dishes, school
