--- a/aboutme.html
+++ b/aboutme.html
@@ -11,6 +11,8 @@ body  {
 </head>
 <html>
 <body>
+  <video width="320" height="240" controls>
+  
 <p style = "color:blue;">
 <p> Indira Jackson  
   <h1>Likes: Food,watching shows on netflix/movies, doing hair  </h1> Dislikes: doing dishes, school
