--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,8 @@ body  {
     
   
 <p style = "color:blue;">
-<p> Indira Jackson  
+Indira Jackson
+    </p>
   <h1>Likes: Food,watching shows on netflix/movies, doing hair  </h1> Dislikes: doing dishes, school
   input 
 
