--- a/aboutme.html
+++ b/aboutme.html
@@ -17,9 +17,9 @@ body  {
   
 <p style = "color:blue;">
 Indira Jackson
-    </p>
-  <h1>Likes: Food,watching shows on netflix/movies, doing hair  </h1> Dislikes: doing dishes, school
-  input 
-
+    
+  <h1>Likes: Food,watching shows on netflix/movies, doing hair  </h1>// Dislikes: doing dishes, school
+  //input 
+</p>
   </body>
 </html>
