--- a/aboutme.html
+++ b/aboutme.html
@@ -13,6 +13,7 @@ body  {
 <body>
   <video width="320" height="240" controls>
  <source src="IMG_3743.mp4" type="video.mp4">
+  </video>
     
   
 <p style = "color:blue;">
