--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@ body  {
   </video>
     
   
-<p style = "color:blue;">
+<p style = "color:black;">
 Indira Jackson
     
   <h1>Likes: Food,watching shows on netflix/movies, doing hair  </h1>// Dislikes: doing dishes, school
