--- a/aboutme.html
+++ b/aboutme.html
@@ -11,12 +11,13 @@ body  {
 </head>
 <html>
 <body>
+  
   <video width="320" height="240" controls>
  <source src="IMG_3743.mp4" type="video.mp4">
   </video>
     
   
-<p style = "color:black;">
+<p style = "color:blue;">
 Indira Jackson
     
   <h1>Likes: Food,watching shows on netflix/movies, doing hair  </h1>// Dislikes: doing dishes, school
