--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,7 @@ body  {
 </style>
   
   <title>About Indira </title>
+  }
 </head>
 <html>
 <body>
@@ -15,9 +16,10 @@ body  {
   <video width="320" height="240" controls>
  <source src="IMG_3743.mp4" type="video.mp4">
   </video>
+  }
     
   
-<p style = "color:blue;">
+<p style = "color:black;">
 Indira Jackson
     
   <h1>Likes: Food,watching shows on netflix/movies, doing hair  </h1>// Dislikes: doing dishes, school
