--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,6 @@
 body  {
     background-image: url("Rihanna.jpg");
     background-color: #cccccc;
-}
 </style>
   
   <title>About Indira </title>
@@ -16,13 +15,12 @@ body  {
   <video width="320" height="240" controls>
  <source src="IMG_3743.mp4" type="video.mp4">
   </video>
-  }
     
   
 <p style = "color:black;">
 Indira Jackson
     
-  <h1>Likes: Food,watching shows on netflix/movies, doing hair  </h1>// Dislikes: doing dishes, school
+  <h1>All About My Life </h1>// My Name is Indira and im 16 years old going to 11th grade.
   //input 
 </p>
   </body>
