--- a/aboutme.html
+++ b/aboutme.html
@@ -22,5 +22,11 @@ Indira Jackson
     
   <h1>All About My Life </h1>// My Name is Indira and im 16 years old going to 11th grade.
 </p>
-  </body>
+  <html>
+<body>
+
+<img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
+
+</body>
 </html>
+y>
